# boat_scraper

./: .gitignore  daily_run.sh  main.py  push_daily.ps1  pyproject.toml  requirements.txt  setup_scheduler.ps1  指南書.txt
.github/workflows/: morning_check.yml  notify.yml  odds_refresh.yml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
configs/: config.yaml
docs/: index.html  manifest.json  pdca.html  sw.js
docs/css/: style.css
docs/data/: bets_2026-05-19.json  bets_2026-05-20.json  bets_2026-05-21.json  bets_2026-05-22.json  bets_2026-05-23.json  bets_2026-05-24.json  bets_2026-05-25.json  bets_2026-05-26.json  bets_2026-05-27.json  bets_2026-05-28.json  bets_2026-05-29.json  bets_2026-05-30.json  bets_2026-05-31.json  bets_2026-06-01.json  bets_2026-06-02.json  bets_2026-06-03.json  bets_2026-06-04.json  bets_2026-06-05.json  bets_2026-06-06.json  bets_2026-06-07.json  bets_2026-06-08.json  bets_2026-06-09.json  bets_2026-06-10.json  bets_2026-06-12.json  bets_2026-06-13.json  bets_2026-06-14.json  bets_2026-06-18.json  bets_2026-06-21.json  bets_2026-06-22.json  bets_2026-06-27.json  bets_2026-07-05.json  bets_2026-07-06.json  bets_2026-07-11.json  bets_2026-07-12.json  meta.json  pdca.json  performance.json  probs_2026-05-24.json  probs_2026-05-25.json  probs_2026-05-26.json  (+60 more)
docs/js/: app.js
scripts/: compare_pl_vs_current.py  daily_judge.bat  daily_update.bat  notify.py
src/: export.py
src/api/: server.py
src/backtest/: runner.py
src/betting/: ev_calculator.py  (+1 more)
web/: index.html
(+29 files in other folders)
